--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <li>Weather</li>
         <li style="float: right">About</li>
       </ul>
+      <br />
+      <br />
     </nav>
+    <h1>Weather!</h1>
     <div class="flex-col">
       <div class="cool-things">
         <div class="img-box">
@@ -50,6 +53,57 @@
             <p class="wdp3">Gust: <span id="wind_data_gust"></span></p>
           </div>
         </div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <h1>News!</h1>
+    <div class="news">
+      <h2 class="art_head">Article 1</h2>
+      <div class="a1" id="a1">
+        <img src="" alt="" id="a1_img" />
+        <h3 id="a1_head"></h3>
+        <p id="a1_desc"></p>
+        <h5 class="a1_author">By: <span id="a1_author"></span></h5>
+        <p id="a1_cont"></p>
+        <h5 class="a1_source">Source: <a id="a1_source" href=""></a></h5>
+      </div>
+      <h2 class="art_head">Article 2</h2>
+      <div class="a2" id="a2">
+        <img src="" alt="" id="a2_img" />
+        <h3 id="a2_head"></h3>
+        <p id="a2_desc"></p>
+        <h5 class="a2_author">By: <span id="a2_author"></span></h5>
+        <p id="a2_cont"></p>
+        <h5 class="a2_source">Source: <a id="a2_source" href=""></a></h5>
+      </div>
+      <h2 class="art_head">Article 3</h2>
+      <div class="a3" id="a3">
+        <img src="" alt="" id="a3_img" />
+        <h3 id="a3_head"></h3>
+        <p id="a3_desc"></p>
+        <h5 class="a3_author">By: <span id="a3_author"></span></h5>
+        <p id="a3_cont"></p>
+        <h5 class="a3_source">Source: <a id="a3_source" href=""></a></h5>
+      </div>
+      <h2 class="art_head">Article 4</h2>
+      <div class="a4" id="a4">
+        <img src="" alt="" id="a4_img" />
+        <h3 id="a4_head"></h3>
+        <p id="a4_desc"></p>
+        <h5 class="a4_author">By: <span id="a4_author"></span></h5>
+        <p id="a4_cont"></p>
+        <h5 class="a4_source">Source: <a id="a4_source" href=""></a></h5>
+      </div>
+      <h2 class="art_head">Article 5</h2>
+      <div class="a5" id="a5">
+        <img src="" alt="" id="a5_img" />
+        <h3 id="a5_head"></h3>
+        <p id="a5_desc"></p>
+        <h5 class="a5_author">By: <span id="a5_author"></span></h5>
+        <p id="a5_cont"></p>
+        <h5 class="a5_source">Source: <a id="5_source" href=""></a></h5>
       </div>
     </div>
     <main></main>
